# Angel-in-Pocket-Full-Business-Agent-with-Subscriptions

./: Angel-in-Pocket-GRA-Full-Business-Agent.rar  LICENSE  README.md  paper-ru.tex  paper.tex  pyproject.toml  requirements.txt
angel/: accounting_agent.py  business_designer.py  finance_agent.py  idea_intake.py  marketing_agent.py  marketplace_agent.py  preference_model.py  process_mapper.py  product_designer.py  production_agent.py  risk_manager.py  sales_agent.py  strategy_planner.py  tax_agent.py
app/: auth.py  config.py  database.py  main.py  models.py
app/routers/: accounting.py  auth.py  finance.py  ideas.py  processes.py  products.py  projects.py  subscriptions.py  taxes.py
app/services/: celery_tasks.py  integrations.py
app/services/payment/: __init__.py  base.py  stripe_gateway.py
docs/: GRA-AgentOS.md  README.md
frontend/: package.json
frontend/src/: AccountingView.tsx  App.tsx  FinanceView.tsx  IdeaForm.tsx  Login.tsx  ProcessView.tsx  ProductView.tsx  ProjectDashboard.tsx  SubscriptionView.tsx  TaxView.tsx
gra_core/: client.py  models.py  multiverse_adapter.py  stability_engine.py
